--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,10 +359,10 @@ main {
   color: var(--white-1);
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
-  width: max-content;
   padding: 3px 10px 10px 3px;
   border-radius: 8px;
   margin-top: 6px;
+  margin-bottom:15px;
   text-align: center;
 }
 
@@ -383,6 +383,11 @@ main {
   text-decoration: underline;
 }
 
+@media (max-width:1200px) {
+   .info-content .resume-download {
+    text-align: left;
+  }
+}
 
 .info_more-btn {
   position: absolute; 
@@ -1112,7 +1117,6 @@ main {
 
 
 
-
 /*-----------------------------------*\
   #BLOG
 \*-----------------------------------*/
@@ -1331,7 +1335,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .project-img,
-  .blog-banner-box { height: auto; }
+  .blog-banner-box { height: 200px; }
 
 }
 
